Time tracking dashboard, fix icon clipping

--- a/11-time-tracking-dashboard/time-tracking-dashboard-main/style.less
+++ b/11-time-tracking-dashboard/time-tracking-dashboard-main/style.less
@@ -7,11 +7,11 @@
 }
 
 :root {
+    --21px: 1.3125rem;
+
+    --card-icon-offset: 10px;
     --card-corner-radius: 15px;
     --card-border-width: 38px;
-    --card-border-width-desktop: 45px;
-    --almost-black: hsl(0deg, 0%, 12%);
-    --21px: 1.3125rem;
 
     @media (min-width: 600px) {
         --card-border-width: 33px;
@@ -20,6 +20,9 @@
     @media (min-width: 1000px) {
         --card-border-width: 45px;
     }
+
+    --almost-black: hsl(0deg, 0%, 12%);
+
 }
 
 body {
@@ -140,24 +143,7 @@ body {
 
 .report-section {
     border-radius: var(--card-corner-radius);
-}
-
-.report-section__inner {
-    display: flex;
-    flex-direction: column;
-    border-radius: var(--card-corner-radius);
-    gap: var(--spacing-100);
-    padding: var(--spacing-300);
-    background-color: var(--navy-900);
-
-    @media (min-width: 600px) {
-        gap: var(--spacing-200);
-    }
-
-    @media (min-width: 1000px) {
-        gap: var(--spacing-300);
-        padding: var(--spacing-400);
-    }
+    overflow: hidden;
 }
 
 .report-section::before {
@@ -165,9 +151,21 @@ body {
     --section-icon: none;
     content: var(--section-icon);
     height: var(--card-border-width);
-    overflow: hidden;
+
     position: relative;
-    left: 60%;
+    left: 70%;
+    top: calc(var(--card-icon-offset) * -1);
+
+    @media (min-width: 600px) {
+        left: 50%;
+    }
+
+    @media (min-width: 1000px) {
+        left: 60%;
+    }
+
+    overflow: clip;
+    overflow-clip-margin: var(--card-icon-offset);
 }
 
 .report-section--work {
@@ -216,6 +214,24 @@ body {
 
 .report-section--self-care::before {
     --section-icon: url("images/icon-self-care.svg");
+}
+
+.report-section__inner {
+    display: flex;
+    flex-direction: column;
+    border-radius: var(--card-corner-radius);
+    gap: var(--spacing-100);
+    padding: var(--spacing-300);
+    background-color: var(--navy-900);
+
+    @media (min-width: 600px) {
+        gap: var(--spacing-200);
+    }
+
+    @media (min-width: 1000px) {
+        gap: var(--spacing-300);
+        padding: var(--spacing-400);
+    }
 }
 
 .report-section__header {
